[gd_scene load_steps=9 format=3 uid="uid://cie0i1r8win6a"]

[ext_resource type="Script" uid="uid://dhu0ss32yek3f" path="res://scenes/user_interface/user_interface.gd" id="1_2dtu1"]
[ext_resource type="LabelSettings" uid="uid://ccnu8jeeuuyxf" path="res://resources/font_title_36_yellow.tres" id="1_cj8yd"]
[ext_resource type="LabelSettings" uid="uid://baic308ucf6hw" path="res://resources/font_title_72_yellow.tres" id="2_2dtu1"]
[ext_resource type="LabelSettings" uid="uid://0bruyevsxrw7" path="res://resources/font_title_72_white.tres" id="3_f1hci"]
[ext_resource type="AudioStream" uid="uid://cgo6a132tguqa" path="res://assets/audio/score.wav" id="5_f1hci"]

[sub_resource type="Animation" id="Animation_f1hci"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/LabelContinue:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_2dtu1"]
resource_name = "fade_in_out"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/LabelContinue:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.4, 0.5, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pvt6f"]
_data = {
&"RESET": SubResource("Animation_f1hci"),
&"fade_in_out": SubResource("Animation_2dtu1")
}

[node name="UserInterface" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2dtu1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="LabelScore" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "000"
label_settings = ExtResource("1_cj8yd")

[node name="LabelGameOver" type="Label" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "Game Over"
label_settings = ExtResource("2_2dtu1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelContinue" type="Label" parent="MarginContainer"]
visible = false
layout_mode = 2
text = "press space"
label_settings = ExtResource("3_f1hci")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_pvt6f")
}
autoplay = "fade_in_out"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_f1hci")

[connection signal="timeout" from="RestartTimer" to="." method="_on_restart_timer_timeout"]
